<resources>
    <string name="app_name">App_Comedor_UNMSM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <!--Login -->
    <string name="login_tittle">Iniciar sesión</string>
    <string name="login_forget_password">¿No recuerdas tu contraseña?</string>
    <string name="mail_label">Correo universitario</string>
    <string name="mail_inner_label">correo</string>
    <string name="password_label">Contraseña</string>
    <string name="password_inner_label">contraseña</string>

    <!-- Reservar Turno -->
    <string name="seleccionar">Selecionar Turno</string>
    <string name="turno1">1</string>
    <string name="turno2">2</string>
    <string name="turno3">3</string>
    <string-array name="turnos">
        <item>@string/turno1</item>
        <item>@string/turno2</item>
        <item>@string/turno3</item>
    </string-array>

    <!-- NavBar-->
    <string name="menu_home">Menu Principal</string>
    <string name="menu_semanal">Menu Semanal</string>
    <string name="menu_error">Informe de Errores</string>
    <string name="mostrar_ticket">Ticket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>