<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.app_comedor_unmsm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_mostrar_ticket3"
            app:destination="@id/nav_mostrar_ticket" />
    </fragment>

    <fragment
        android:id="@+id/nav_menu_semanal"
        android:name="com.example.app_comedor_unmsm.ui.menuSemanal.MenuSemanalFragment"
        android:label="@string/menu_semanal"
        tools:layout="@layout/fragment_menu_semanal" />

    <fragment
        android:id="@+id/nav_error"
        android:name="com.example.app_comedor_unmsm.ui.error.ErrorFragment"
        android:label="@string/menu_error"
        tools:layout="@layout/fragment_error" />
    <fragment
        android:id="@+id/nav_mostrar_ticket"
        android:name="com.example.app_comedor_unmsm.ui.mostrarTicket.MostrarTicketFragment"
        android:label="@string/mostrar_ticket"
        tools:layout="@layout/fragment_mostrar_ticket" />
</navigation>