<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sm_bg_color"
    tools:context=".ui.login.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="-300dp"
            android:src="@drawable/login"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="250dp"
            android:background="@drawable/login_background_container"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/login_tittle"
                android:textColor="@color/black"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Mail layout-->
            <LinearLayout
                android:id="@+id/mail_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:gravity="start"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">
                <!-- Mail tittle-->
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/mail_label"
                    android:textColor="@color/black" />
                >
                <!-- Mail input-->
                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/login_input_form_bg"
                    android:gravity="center_vertical"
                    android:paddingVertical="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:src="@drawable/mail_login_icon" />

                    <EditText
                        android:id="@+id/email_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/roboto_light"
                        android:hint="@string/mail_inner_label"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/input_text_color_light_theme" />

                </LinearLayout>
            </LinearLayout>

            <!-- Password layout-->
            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mail_layout">
                <!-- Password tittle-->
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/password_label"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent" />
                <!-- Mail input-->
                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/login_input_form_bg"
                    android:gravity="center_vertical"
                    android:paddingVertical="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:src="@drawable/ic_outline_lock_24" />

                    <EditText
                        android:id="@+id/password_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/roboto_light"
                        android:hint="@string/password_inner_label"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/input_text_color_light_theme" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/visibilityIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:onClick="changePasswordVisibility"
                        android:src="@drawable/ic_outline_visibility_off_24"
                        tools:ignore="UsingOnClickInXml" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_layout">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_form_bg"
                    android:fontFamily="@font/roboto_medium"
                    android:onClick="login"
                    android:paddingHorizontal="50dp"
                    android:text="@string/login_tittle"
                    android:textColor="@color/white"
                    app:backgroundTint="@null"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/login_forget_password"
                    android:textColor="@color/input_text_color_password_light_theme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>